# ParallelCoordinatesPlugin

./: CMakeLists.txt  PluginInfo.json  README.md  TODO.md  conanfile.py
.github/workflows/: build.yml
res/: parcoords_resources.qrc
res/jslibs/: LICENSE_D3  LICENSE_PC  d3.parcoords.css  d3.parcoords.js  qwebchannel.tools.js
res/parcoords/: parcoords.html  parcoords.tools.js
src/: ClampAction.cpp  ClampAction.h  DimensionSelectionAction.cpp  DimensionSelectionAction.h  ParallelCoordinatesPlugin.cpp  ParallelCoordinatesPlugin.h  ParallelCoordinatesPlugin.json  ParallelCoordinatesSettings.cpp  ParallelCoordinatesSettings.h  ParallelCoordinatesWidget.cpp  ParallelCoordinatesWidget.h  SettingsAction.cpp  SettingsAction.h
src/web/: basic.html  brushing.html
